codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_markdown_code_blocks_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---
•     -- Indented code block (4 spaces)
      SELECT *
      FROM "users"
      WHERE "email" LIKE '%@example.com';

  ╭ code: markdown
  │ ```sh
  │ printf 'fenced within fenced\n'
  │ ```

  ╭ code: jsonc
  │ {
  │   // comment allowed in jsonc
  │   "path": "C:\\Program Files\\App",
  │   "regex": "^foo.*(bar)?$"
  │ }
