codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. gpt-5.4 (default)  Latest frontier agentic coding model.
  2. GPT-5.4-Mini       Smaller frontier agentic coding model.
  3. gpt-5.3-codex      Frontier Codex-optimized agentic coding model.
  4. gpt-5.2            Optimized for professional work and long-running
                        agents

  Press enter to select reasoning effort, or esc to dismiss.
