codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 1853
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to pause)                                                   "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.4 default · 100% left · ~/workspace/custom-builds/codex/codex-rs/tui    "
